   used within the dynamic weight attribute when specifying a mapping.

Dialplan functions
------------------
 * Addition of the VM_INFO function that can be used to retrieve voicemail
   user information, such as the email address and full name.
   The MAILBOX_EXISTS dialplan function has been deprecated in favour of
   VM_INFO.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.8 to Asterisk 10 -------------------
------------------------------------------------------------------------------

Text Messaging
--------------
 * Asterisk now has protocol independent support for processing text messages
   outside of a call.  Messages are routed through the Asterisk dialplan.
   SIP MESSAGE and XMPP are currently supported.  There are options in
   jabber.conf and sip.conf to allow enabling these features.
     -> jabber.conf: see the "sendtodialplan" and "context" options.
     -> sip.conf: see the "accept_outofcall_message", "auth_message_requests"
        and "outofcall_message_context" options.
   The MESSAGE() dialplan function and MessageSend() application have been
   added to go along with this functionality.  More detailed usage information
   can be found on the Asterisk wiki (http://wiki.asterisk.org/).
 * If real-time text support (T.140) is negotiated, it will be preferred for
   sending text via the SendText application. For example, via SIP, messages
   that were once sent via the SIP MESSAGE request would be sent via RTP if
   T.140 text is negotiated for a call.

Parking
-------
 * parkedmusicclass can now be set for non-default parking lots.

Asterisk Manager Interface
--------------------------
 * PeerStatus now includes Address and Port.
 * Added Hold events for when the remote party puts the call on and off hold
   for chan_dahdi ISDN channels.
 * Added new action MeetmeListRooms to list active conferences (shows same
   data as "meetme list" at the CLI).